Home table view cell added 1)Navigation title populated from Api 2)Home table view cell populated with default components

--- a/FactPOC/Podfile
+++ b/FactPOC/Podfile
@@ -4,7 +4,7 @@
 target 'FactPOC' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-
+pod 'SDWebImage', '~> 5.0'
   # Pods for FactPOC
 
   target 'FactPOCTests' do
