--- a/FactPOC/Podfile
+++ b/FactPOC/Podfile
@@ -5,6 +5,8 @@ target 'FactPOC' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 pod 'SDWebImage', '~> 5.0'
+pod 'PKHUD', '~> 5.0'
+
   # Pods for FactPOC
 
   target 'FactPOCTests' do
