--- a/FactPOC/Podfile
+++ b/FactPOC/Podfile
@@ -11,7 +11,8 @@ pod 'PKHUD', '~> 5.0'
 
   target 'FactPOCTests' do
     inherit! :search_paths
-    # Pods for testing
+    pod 'SDWebImage', '~> 5.0'
+    pod 'PKHUD', '~> 5.0'
   end
 
   target 'FactPOCUITests' do
